# huffman

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  try_huffman.cpp
include/huffman/: huffman.hpp  tree.hpp
src/: CMakeLists.txt  huffman.cpp  tree.hpp
test/: CMakeLists.txt  test_huffman.cpp
